# micrograd

./: .dockerignore  .gitignore  Dockerfile  README.md  backpropagation.py  neural_network.py  pyproject.toml  tox.ini
.github/workflows/: publish.yml  tox.yml
micrograd/: backpropagation.py  build_graph.py  neural_network.py
tests/: test_backpropagation.py  test_neural_network.py  utils.py
