[project]
name = "micrograd"
version = "0.0.1"
description = "Backprogation from scratch"
keywords = []
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Natural Language :: English",
	"Operating System :: POSIX :: Linux",
	"Operating System :: MacOS :: MacOS X",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
	"graphviz==0.20.1",
	"pip==24.0",
]

[metadata]
author = "Lorenzo Del Signore"
author_email = "xelithras94@gmail.com"
maintainer = "Lorenzo Del Signore"
maintainer_email = "xelithras94@gmail.com"
url = "https://github.com/lorenzo-delsignore/micrograd"
long_description = "Backprogation from scratch"
license = { file = "LICENSE" }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]
namespaces = false

[project.scripts]
micrograd = "micrograd.build_graph:main"

[project.optional-dependencies]
test = [
	"coverage>=5.0.2",
	"pytest>=6.1.1",
	"pytest-mock",

]
docs = ["mkdocs>=1.0.4"]
dev = [
	"micrograd[test, docs]",
	"mypy",
	"tox",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.distutils.bdist_wheel]
universal = true

[build-system]
requires = [
	"setuptools==69.5.1",
	"wheel",
]
